v1.16: hide Spurs heart on mobile to avoid hamburger overlap

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -18,6 +18,13 @@
     @include clearfix;
     padding: .5em;
     position: relative;
+
+    .spurs-heart {
+      display: none;
+      @include breakpoint($medium) {
+        display: block;
+      }
+    }
     font-family: $sans-serif-narrow;
 
     @include breakpoint($x-large) {
